--- a/front/styles.css
+++ b/front/styles.css
@@ -185,3 +185,20 @@ h1 {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
 }
+.awesomplete ul {
+    z-index: 1000; /* Ensure it's above other elements */
+    background: white; /* Ensure background is visible */
+    border: 1px solid #ccc;
+    max-height: 200px; /* Limit the height of the dropdown */
+    overflow-y: auto;  /* Enable vertical scrolling */
+    scrollbar-width: thin; /* For modern browsers */
+}
+
+
+.awesomplete mark {
+    background: none !important;
+    color: inherit !important;
+    font-weight: inherit !important;
+    text-decoration: none !important;
+}
+
